force-app/main/default/objects/Quote/fields/Account_Manager_Formula__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Formula__c</fullName>
    <formula>Opportunity.Owner.FirstName + &apos; &apos; + Opportunity.Owner.LastName + &apos; / &apos; + Opportunity.Owner.Email + &apos; / &apos; + Opportunity.Owner.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Manager</label>
    <type>Text</type>
</CustomField>