force-app/main/default/objects/Quote/fields/Billing_Email2__c.field-meta.xml
<CustomField>
    <fullName>Billing_Email2__c</fullName>
    <label>Billing Email</label>
    <type>Email</type>
</CustomField>