force-app/main/default/objects/Quote/fields/Billing_Email__c.field-meta.xml
<CustomField>
    <fullName>Billing_Email__c</fullName>
    <formula>Contact.Email</formula>
    <label>Billing Email</label>
    <type>Text</type>
</CustomField>