force-app/main/default/objects/Quote/fields/Border_of_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Border_of_Responsibility__c</fullName>
    <label>Border of Responsibility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>