force-app/main/default/objects/Quote/fields/ByPassValidationRules__c.field-meta.xml
<CustomField>
    <fullName>ByPassValidationRules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ByPassValidationRules</label>
    <type>Checkbox</type>
</CustomField>