force-app/main/default/objects/Quote/fields/Carrier_Delivery_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Delivery_Instructions__c</fullName>
    <label>Carrier Delivery Instructions</label>
    <length>450</length>
    <type>LongTextArea</type>
</CustomField>