force-app/main/default/objects/Quote/fields/Created_On__c.field-meta.xml
<CustomField>
    <fullName>Created_On__c</fullName>
    <description>SAP Created On</description>
    <label>Created On</label>
    <length>255</length>
    <type>Text</type>
</CustomField>