force-app/main/default/objects/Quote/fields/Custom_Terms_Detail__c.field-meta.xml
<CustomField>
    <fullName>Custom_Terms_Detail__c</fullName>
    <label>Custom Terms Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>