force-app/main/default/objects/Quote/fields/Customer_Requested_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Requested_Ship_Date__c</fullName>
    <formula>Opportunity.Customer_Requested_Ship_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Requested Ship Date</label>
    <type>Date</type>
</CustomField>