force-app/main/default/objects/Quote/fields/Customs_broker_contact_name__c.field-meta.xml
<CustomField>
    <fullName>Customs_broker_contact_name__c</fullName>
    <label>Customs broker contact name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>