force-app/main/default/objects/Quote/fields/Customs_broker_email_address__c.field-meta.xml
<CustomField>
    <fullName>Customs_broker_email_address__c</fullName>
    <label>Customs broker email address</label>
    <length>40</length>
    <type>Text</type>
</CustomField>