force-app/main/default/objects/Quote/fields/Customs_broker_phone_number__c.field-meta.xml
<CustomField>
    <fullName>Customs_broker_phone_number__c</fullName>
    <label>Customs broker phone number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>