force-app/main/default/objects/Quote/fields/DiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>DiscountAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Field that stores the Discount that should apply to the Quote and applicable in Total__c.</description>
    <label>Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>