force-app/main/default/objects/Quote/fields/Inactive_Products__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Products__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inactive Products ?</label>
    <type>Checkbox</type>
</CustomField>