force-app/main/default/objects/Quote/fields/Inco_Terms__c.field-meta.xml
<CustomField>
    <fullName>Inco_Terms__c</fullName>
    <label>Incoterms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Inco_Terms</valueSetName>
    </valueSet>
</CustomField>