force-app/main/default/objects/Quote/fields/Object_Limits_Record_Types_Related_Look__c.field-meta.xml
<CustomField>
    <fullName>Object_Limits_Record_Types_Related_Look__c</fullName>
    <label>Object Limits Record Types Related Look</label>
    <length>40</length>
    <type>Text</type>
</CustomField>