force-app/main/default/objects/Quote/fields/Payment_Terms1__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms1__c</fullName>
    <formula>TEXT(Opportunity.Account.Payment_Terms__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Terms</label>
    <type>Text</type>
</CustomField>