force-app/main/default/objects/Quote/fields/QuoteBlocked__c.field-meta.xml
<CustomField>
    <fullName>QuoteBlocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to inform if Quote is blocked to changes or not.</description>
    <label>Quote Blocked ?</label>
    <type>Checkbox</type>
</CustomField>