force-app/main/default/objects/Quote/fields/Request_Week_Of__c.field-meta.xml
<CustomField>
    <fullName>Request_Week_Of__c</fullName>
    <label>Request Week Of:</label>
    <length>40</length>
    <type>Text</type>
</CustomField>