force-app/main/default/objects/Quote/fields/Sales_Organization__c.field-meta.xml
<CustomField>
    <fullName>Sales_Organization__c</fullName>
    <description>SAP Sales Organization</description>
    <label>Sales Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>