force-app/main/default/objects/Quote/fields/SAP_External_ID__c.field-meta.xml
<CustomField>
    <fullName>SAP_External_ID__c</fullName>
    <label>SAP External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>