force-app/main/default/objects/Quote/fields/Shipe_early__c.field-meta.xml
<CustomField>
    <fullName>Shipe_early__c</fullName>
    <label>Ship early</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>