force-app/main/default/objects/Quote/fields/Shipping_Code__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Code__c</fullName>
    <label>Shipping Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Shipping_Codes</valueSetName>
    </valueSet>
</CustomField>