force-app/main/default/objects/Quote/fields/Shipping_Contact_Email_0__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Contact_Email_0__c</fullName>
    <label>Shipping Contact Email</label>
    <type>Email</type>
</CustomField>