force-app/main/default/objects/Quote/fields/Shipping_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Contact_Email__c</fullName>
    <label>Shipping Contact Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>