force-app/main/default/objects/Quote/fields/Shipping_Contact_Phone_0__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Contact_Phone_0__c</fullName>
    <label>Shipping Contact Phone</label>
    <type>Phone</type>
</CustomField>