force-app/main/default/objects/Quote/fields/Tax_Rate_Date__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate_Date__c</fullName>
    <label>Tax Rate Date</label>
    <type>Date</type>
</CustomField>