force-app/main/default/objects/Quote/fields/TECH_External_Account_ERP_ID_Formula__c.field-meta.xml
<CustomField>
    <fullName>TECH_External_Account_ERP_ID_Formula__c</fullName>
    <formula>IF(!ISBLANK(Reseller__c),
Reseller__r.External_ERP_ID__c,
IF(!ISBLANK(Opportunity.Account.ParentId),
Opportunity.Account.Parent.External_ERP_ID__c,
Opportunity.Account.External_ERP_ID__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Account ERP ID Formula</label>
    <type>Text</type>
</CustomField>