force-app/main/default/objects/Quote/fields/TECH_Opportunity_Region__c.field-meta.xml
<CustomField>
    <fullName>TECH_Opportunity_Region__c</fullName>
    <formula>TEXT(Opportunity.Region__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Region</label>
    <type>Text</type>
</CustomField>