force-app/main/default/objects/Quote/fields/TECH_Opportunity_Synced_Quote_Id__c.field-meta.xml
<CustomField>
    <fullName>TECH_Opportunity_Synced_Quote_Id__c</fullName>
    <formula>Opportunity.SyncedQuoteId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Synced Quote Id</label>
    <type>Text</type>
</CustomField>