force-app/main/default/objects/Quote/fields/Temporary_Address__c.field-meta.xml
<CustomField>
    <fullName>Temporary_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Temporary Address?</label>
    <type>Checkbox</type>
</CustomField>