force-app/main/default/objects/Quote/fields/Warehouse_Shipping_Notes__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Shipping_Notes__c</fullName>
    <label>Warehouse Shipping Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>