force-app/main/default/objects/Quote/validationRules/PreventInsertQuoteForClosedOpp.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventInsertQuoteForClosedOpp</fullName>
    <active>true</active>
    <description>This validation rule will prevent any insertion on Quote if the related Opportunity is closed.</description>
    <errorConditionFormula>AND(
				ISNEW(),
				Opportunity.IsClosed
)</errorConditionFormula>
    <errorMessage>Quotes cannot be created for closed opportunities.</errorMessage>
</ValidationRule>